first pull request

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <!--<audio> elements go in here-->
   <div id="audio-wrapper"></div>
 
+  <!--Lots and lots of javascript-->
   <script src="https://cdn.jsdelivr.net/npm/howler@2.2.3/dist/howler.min.js"></script>
   <script src="libraries/p5.min.js"></script>
   <script src="libraries/matter.min.js"></script>
