--- a/index.html
+++ b/index.html
@@ -21,17 +21,21 @@
   <script src="libraries/pd.js"></script>
   <script src="libraries/bower_components/pathfinding/pathfinding-browser.min.js"></script>
 
+  <!--Game Configuration-->
   <script src="game/config/vars.js"></script>
   <script src="game/config/preload.js"></script>
   <script src="game/config/util.js"></script>
   <script src="game/config/levels.js"></script>
-  
+
+  <!--Game Environment-->
   <script src="game/environment/audio.js"></script>
   <script src="game/environment/particle.js"></script>
   <script src="game/environment/bullet.js"></script>
 
+  <!--Interface (Buttons)-->
   <script src="game/interface/button.js"></script>
-  
+
+  <!--Matter.js body extensions-->
   <script src="game/body/body.js"></script>
   <script src="game/body/block.js"></script>
   <script src="game/body/unit.js"></script>
@@ -40,9 +44,10 @@
   <script src="game/body/base.js"></script>
   <script src="game/body/turret.js"></script>
   
-
+  <!--Game UI-->
   <script src="game/interface/gameui.js"></script>
-  
+
+  <!--Game Scenes-->
   <script src="game/scenes/menu.js"></script>
   <script src="game/scenes/game.js"></script>
   <script src="game/scenes/cut.js"></script>
@@ -51,7 +56,7 @@
   <script src="game/scenes/win.js"></script>
   <script src="game/scenes/powerups.js"></script>
   
-  
+  <!--Run the game-->
   <script src="game/run.js"></script> 
 </body>
 
